extras/vamp-deployment/vamp-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    component-identifier: vamp-router
    source-of-ingress: vamp-router 
  name: vamp-router
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: api
    port: 10001
    protocol: TCP
    targetPort: 10001
  selector:
    component-identifier: vamp-router
  type: LoadBalancer
